# elasticas-cad

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
data/: database.sqlite3
data/models/: Arm  Blouse  Blouse0  Blouse1  Blouse2  Dress  Dress0  Dress1  Dress2  Man  MensJacket  Skirt  StraightSkirt  Woman  classes.xml
src/curves_editor/: gui_new.py
src/debug_module/: CMakeInclude.txt  eldebug.cpp  eldebug.h  main.cpp
src/el2d_module/: CMakeInclude.txt  el2d.cpp  el2d.h  el2dmainwindow.cpp  el2dmainwindow.h  el2dview.cpp  el2dview.h  main.cpp  plot.cpp  plot.h
src/el2d_module/plots/: blouseplot.cpp  blouseplot.h  skirtplot.cpp  skirtplot.h
src/el3d_module/: CMakeInclude.txt  el3d.cpp  el3d.h  el3dmainwindow.cpp  el3dmainwindow.h  el3dpythonbindings.cpp  el3dpythonbindings.h  el3dviewport.cpp  el3dviewport.h  main.cpp
src/el3d_module/scripts/: MeshBuilder.py  ModelDataGenerator.py  Models.py
src/elcore/: CMakeInclude.txt  elbasicdialogs.cpp  elbasicdialogs.h  elcore.cpp  elcore.h  elexception.cpp  elexception.h  elplugin.cpp  elplugin.h
src/generators/: generate_dress.py  generate_dummy.py  generate_man.py  generate_mens_jacket.py  generate_skirt.py  generate_top.py  pyel3d_math.py  pyel3d_model.py
src/kongomato/: CMakeLists.txt  kongoapplication.cpp  kongoapplication.h  kongobase.cpp  kongobase.h  kongofileformat.cpp  kongofileformat.h  kongofont.cpp  kongoinput.cpp  kongoinput.h  kongomath.cpp  kongomath.h  kongoscene.cpp  kongoscene.h  kongosprite.cpp  kongosprite.h  kongovideodevice.cpp  kongovideodevice.h  test.cpp  test2d.cpp  todo
src/kongomato/media/: blank.fm3  unit1.fm3
src/main/: CMakeInclude.txt  elmainwindow.cpp  elmainwindow.h  main.cpp
src/main/dialogs/: dressdialog.cpp  dressdialog.h  elblousedialogs.cpp  elblousedialogs.h  eldressdialogs.cpp  eldressdialogs.h  elflaredskirtdialogs.cpp  elflaredskirtdialogs.h  eljacketdialogs.cpp  eljacketdialogs.h  elpantsdialog.cpp  elpantsdialog.h  elrpdialogs.cpp  elrpdialogs.h  elskirtdialogs.cpp  elskirtdialogs.h  elsleevedialogs.cpp  elsleevedialogs.h  elstraightskirtdialogs.cpp  elstraightskirtdialogs.h  eltulipskirtdialogs.cpp  eltulipskirtdialogs.h  fakeskirtdialog.cpp  fakeskirtdialog.h  skirtdialog.cpp  skirtdialog.h
src/old_2d_module/: CMakeInclude.txt
src/old_2d_module/C2DItems/: C2DBasic.cpp  C2DBasic.h  CMakeInclude.txt
src/old_2d_module/C2DItems/Items/: C2DDefaultBelt.cpp  C2DDefaultBelt.h  C2DFlaredSkirt.cpp  C2DFlaredSkirt.h  C2DFlaredSkirtKMProperties.cpp  C2DFlaredSkirtKMProperties.h  C2DStraightSkirt.cpp  C2DStraightSkirt.h  C2DStraightSkirtDartsDialog.cpp  C2DStraightSkirtDartsDialog.h  C2DStraightSkirtDialog.cpp  C2DStraightSkirtDialog.h  C2DTulipSkirt.cpp  C2DTulipSkirt.h
src/old_2d_module/C2DModule/: C2DAbstractObject.h  C2DCommon.cpp  C2DCommon.h  C2DHack.h  C2DIcons.qrc  C2DKernel.cpp  C2DKernel.h  C2DModule.cpp  C2DModule.h  C2DPlugin.cpp  C2DPlugin.h  C2DRuller.cpp  C2DRuller.h  C2DViewport.cpp  C2DViewport.h  CMakeInclude.txt
src/old_2d_module/C2DModule/Frameworks/Items/include/: C2DDialog.cpp  C2DDialog.h  C2DExchange.cpp  C2DExchange.h  C2DItem.cpp  C2DItem.h  C2DItemDialog.cpp  C2DItemDialog.h  C2DLayer.h  C2DLayerManager.cpp  C2DLayerManager.h  C2DLibrary.h  C2DManager.cpp  C2DManager.h  C2DPropertiesDialog.cpp  C2DPropertiesDialog.h  C2DSceneItems.cpp  C2DSceneItems.h  C2DSimpleItem.cpp  C2DSimpleItem.h  C2DSync.cpp  C2DSync.h  C2DVariable.cpp  C2DVariable.h  main.cpp
src/old_2d_module/C2DModule/Frameworks/Items/include/Unicus/: Geometry.cpp  Geometry.h  Intersection.cpp  Intersection.h  Unicus.cpp  Unicus.h
src/old_2d_module/C2DModule/Frameworks/Undo/: C2DCommands.cpp  C2DCommands.h
src/old_2d_module/C2DModule/Images/: Preload.tif
src/old_2d_module/C2DTemplates/: C2DTemplates.cpp  C2DTemplates.h  CMakeInclude.txt
src/old_2d_module/C2DTemplates/Items/: C2DBlouse.cpp  C2DBlouse.h  C2DBlouseDialog.cpp  C2DBlouseDialog.h  C2DDress.cpp  C2DDress.h  C2DDressDialog.cpp  C2DDressDialog.h  C2DDressTableDialog.cpp  C2DDressTableDialog.h  C2DJacket.cpp  C2DJacket.h  C2DJacketDialog.cpp  C2DJacketDialog.h  C2DMensjacket.cpp  C2DMensjacket.h  C2DMensjacketDialog.cpp  C2DMensjacketDialog.h  C2DPants.cpp  C2DPants.h  C2DPantsDialog.cpp  C2DPantsDialog.h  C2DSleeve.cpp  C2DSleeve.h  C2DSleeveDialog.cpp  C2DSleeveDialog.h  DressCollar.cpp  DressSleeve.cpp
src/old_2d_module/C2DTemplates/Items/myclasses/: C2DPath.cpp  C2DPath.h  DressCollar.cpp  DressCollar.h  DressEquidistant.cpp  DressEquidistant.h  DressGLine.cpp  DressGLine.h  DressGathers.cpp  DressGathers.h  DressGorlovina.cpp  DressGorlovina.h  DressVorotDecor.cpp  DressVorotDecor.h  DressVorotDialog.cpp  DressVorotDialog.h  SleeveElDialog.cpp  SleeveElDialog.h  cGeometry.cpp  cGeometry.h  layouts.cpp  layouts.h
vms/ubuntu-x86_64/: Vagrantfile
